@@ -1,3 +1,9 @@
+2014-09-17  Tomasz Krawczyk  <tomasz@typo3.pl>
+	* Updated dependencies.
+
+2013-03-11  Simon Schmidt
+	* Updated dependencies. 
+
 2011-12-18  Tomasz Krawczyk  <tomasz@typo3.pl>
 	* Made changes for compatibility with static_info_tables v. 2.3.0.
 
